--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Turn Timer</title>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="turn-timer.js"></script>
+        <script src="jquery-bigtext.js"></script>
         <style>
             .player {
                 float: left;
@@ -13,15 +14,6 @@
 
             .player.deceased {
                 background-color: black;
-            }
-
-            .player-name {
-                font-size: 300%;
-                font-weight: bold;
-            }
-
-            .player-time {
-                font-size: 300%;
             }
 
             #pause {
