--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <script src="turn-timer.js"></script>
         <script src="jquery-bigtext.js"></script>
         <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, user-scalable=no">
     </head>
     <body></body>
 </html>
